k8s/maps-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maps-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server-maps
  template:
    metadata:
      labels:
        component: server-maps
        tier: microservices
    spec:
      containers:
      - name: server-maps
        image: therrapp/maps-service:latest
        resources:
          limits:
            memory: "256Mi"
            cpu: "100m"
        ports:
        - containerPort: 7773
