k8s/push-notifications-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: push-notifications-service-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server-push-notifications
  template:
    metadata:
      labels:
        component: server-push-notifications
        tier: microservices
        layer: services-internal
    spec:
      serviceAccountName: therr-k8s-service-account
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: cloud.google.com/gke-preemptible
                operator: Exists
            weight: 100
      containers:
      - name: server-push-notifications
        image: therrapp/push-notifications-service:latest
        resources:
          limits:
            memory: "256Mi"
            cpu: "100m"
        ports:
        - containerPort: 7775
      - name: cloud-sql-proxy
        # It is recommended to use the latest version of the Cloud SQL proxy
        # Make sure to update on a regular schedule!
        image: gcr.io/cloudsql-docker/gce-proxy:1.17
        resources:
          limits:
            memory: "64Mi"
            cpu: "50m"
        command:
          - "/cloud_sql_proxy"

          # If connecting from a VPC-native GKE cluster, you can use the
          # following flag to have the proxy connect over private IP
          # - "-ip_address_types=PRIVATE"

          # Replace DB_PORT with the port the proxy should listen on
          # Defaults: MySQL: 3306, Postgres: 5432, SQLServer: 1433
          - "-instances=therr-app:us-central1:psql-main-db-prod=tcp:5432"
        securityContext:
          # The default Cloud SQL proxy image runs as the
          # "nonroot" user and group (uid: 65532) by default.
          runAsNonRoot: true
