k8s/server-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-api-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
      - name: server
        image: riliadmin/server-api:8eaf599df80550d1501976627d29399f17f1d89d
        ports:
        - containerPort: 7770
