k8s/server-socket-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-socket-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
      - name: server
        image: riliadmin/server-socket:3e076737b9dcd99d79b396c1d17ca0cbec4aa421
        ports:
        - containerPort: 7743
