k8s/users-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server-users
  template:
    metadata:
      labels:
        component: server-users
    spec:
      containers:
      - name: server-users
        image: therrapp/users-service:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "75m"
        ports:
        - containerPort: 7771
