k8s/websocket-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websocket-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
      - name: server
        image: riliadmin/websocket-service:latest
        ports:
        - containerPort: 7743
