k8s/api-gateway-service-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service-cluster-ip-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    component: server-api-gateway
  ports:
  - port: 7770
    targetPort: 7770
