k8s/api-gateway-service-loadbalander-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-service-loadbalancer-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    component: server-api-gateway
  ports:
  - port: 7770
    targetPort: 7770
  externalTrafficPolicy: Local
