k8s/push-notifications-service-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: push-notifications-service-cluster-ip-service
  namespace: default
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    component: server-push-notifications
  ports:
  - port: 7775
    targetPort: 7775
