k8s/reactions-service-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reactions-service-cluster-ip-service
  namespace: default
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: ClusterIP
  selector:
    component: server-reactions
    type: microservice
    layer: service-internal
  ports:
  - port: 7774
    targetPort: 7774
