k8s/redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
  namespace: default
spec:
  selector:
    component: redis
    type: db
  ports:
  - port: 6379
    targetPort: 6379
