k8s/server-api-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-api-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
  - port: 7770
    targetPort: 7770
