k8s/server-socket-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-socket-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
  - port: 7743
    targetPort: 7743
    protocol: TCP
