k8s/users-service-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server-users
  ports:
  - port: 7771
    targetPort: 7771
