k8s/websocket-service-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket-service-cluster-ip-service
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    component: server
  ports:
  - port: 7743
    targetPort: 7743
    protocol: TCP
