k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout http_502"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "8"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "360"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
      - therr.app
      - www.therr.app
      - api.therr.app
      - www.api.therr.app
      - messages-service.therr.app
      - www.messages-service.therr.app
      - users-service.therr.app
      - www.users-service.therr.app
    secretName: therr-network
  rules:
  - host: therr.app
    http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: client-cluster-ip-service
          servicePort: 7070
  - host: api.therr.app
    http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: api-gateway-service-cluster-ip-service
          servicePort: 7770
  - host: messages-service.therr.app
    http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: messages-service-cluster-ip-service
          servicePort: 7772
  - host: users-service.therr.app
    http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: users-service-cluster-ip-service
          servicePort: 7771
  - host: websocket-service.therr.app
    http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: websocket-service-cluster-ip-service
          servicePort: 7743
  - host: www.therr.app
    http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: client-cluster-ip-service
          servicePort: 7070
  - host: www.api.therr.app
    http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: api-gateway-service-cluster-ip-service
          servicePort: 7770
  - host: www.messages-service.therr.app
    http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: messages-service-cluster-ip-service
          servicePort: 7772
  - host: www.users-service.therr.app
    http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: users-service-cluster-ip-service
          servicePort: 7771
  - host: www.websocket-service.therr.app
    http:
      paths:
      - path: /?(.*)
        backend:
          serviceName: websocket-service-cluster-ip-service
          servicePort: 7743
