k8s/users-service-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: users-service-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      component: server-users
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - {}
  egress:
  - {}
